--- a/packages/adapter-begin/package.json
+++ b/packages/adapter-begin/package.json
@@ -1,6 +1,12 @@
 {
 	"name": "@sveltejs/adapter-begin",
 	"version": "1.0.0-next.13",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sveltejs/kit",
+		"directory": "packages/adapter-begin"
+	},
+	"homepage": "https://kit.svelte.dev",
 	"main": "index.cjs",
 	"types": "index.d.ts",
 	"scripts": {
