--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -1,6 +1,12 @@
 {
 	"name": "@sveltejs/adapter-static",
 	"version": "1.0.0-next.18",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sveltejs/kit",
+		"directory": "packages/adapter-static"
+	},
+	"homepage": "https://kit.svelte.dev",
 	"type": "module",
 	"main": "index.js",
 	"exports": {
