--- a/packages/adapter-vercel/package.json
+++ b/packages/adapter-vercel/package.json
@@ -1,6 +1,12 @@
 {
 	"name": "@sveltejs/adapter-vercel",
 	"version": "1.0.0-next.28",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sveltejs/kit",
+		"directory": "packages/adapter-vercel"
+	},
+	"homepage": "https://kit.svelte.dev",
 	"type": "module",
 	"exports": {
 		".": {
