--- a/packages/create-svelte/package.json
+++ b/packages/create-svelte/package.json
@@ -1,6 +1,12 @@
 {
 	"name": "create-svelte",
 	"version": "2.0.0-next.79",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sveltejs/kit",
+		"directory": "packages/create-svelte"
+	},
+	"homepage": "https://kit.svelte.dev",
 	"bin": "./bin.js",
 	"dependencies": {
 		"kleur": "^4.1.4",
