--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -1,6 +1,12 @@
 {
 	"name": "@sveltejs/kit",
 	"version": "1.0.0-next.167",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sveltejs/kit",
+		"directory": "packages/kit"
+	},
+	"homepage": "https://kit.svelte.dev",
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.24",
