--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -10,39 +10,39 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.24",
-		"cheap-watch": "^1.0.3",
+		"cheap-watch": "^1.0.4",
 		"sade": "^1.7.4",
 		"vite": "^2.5.7"
 	},
 	"devDependencies": {
-		"@rollup/plugin-replace": "^2.4.2",
+		"@rollup/plugin-replace": "^3.0.0",
 		"@types/amphtml-validator": "^1.0.1",
-		"@types/cookie": "^0.4.0",
-		"@types/marked": "^2.0.2",
+		"@types/cookie": "^0.4.1",
+		"@types/marked": "^3.0.1",
 		"@types/micromatch": "^4.0.2",
 		"@types/mime": "^2.0.3",
-		"@types/node": "^14.14.43",
-		"@types/rimraf": "^3.0.0",
-		"@types/sade": "^1.7.2",
-		"amphtml-validator": "^1.0.34",
+		"@types/node": "^16.9.1",
+		"@types/rimraf": "^3.0.2",
+		"@types/sade": "^1.7.3",
+		"amphtml-validator": "^1.0.35",
 		"cookie": "^0.4.1",
 		"devalue": "^2.0.1",
-		"eslint": "^7.25.0",
+		"eslint": "^7.32.0",
 		"kleur": "^4.1.4",
 		"locate-character": "^2.0.5",
-		"marked": "^2.0.3",
+		"marked": "^3.0.4",
 		"micromatch": "^4.0.4",
 		"mime": "^2.5.2",
-		"node-fetch": "^3.0.0-beta.9",
+		"node-fetch": "3.0.0-beta.9",
 		"port-authority": "^1.1.2",
 		"rimraf": "^3.0.2",
-		"rollup": "^2.55.0",
+		"rollup": "^2.56.3",
 		"selfsigned": "^1.10.11",
-		"sirv": "^1.0.12",
-		"svelte": "^3.42.4",
+		"sirv": "^1.0.17",
+		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
-		"svelte2tsx": "~0.4.1",
-		"tiny-glob": "^0.2.8",
+		"svelte2tsx": "~0.4.6",
+		"tiny-glob": "^0.2.9",
 		"uvu": "^0.5.1"
 	},
 	"peerDependencies": {
