--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -30,19 +30,19 @@
 		"prepublishOnly": "npm run build"
 	},
 	"dependencies": {
-		"esbuild": "^0.12.5",
+		"esbuild": "^0.12.28",
 		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
 		"@rollup/plugin-json": "^4.1.0",
 		"@sveltejs/kit": "workspace:*",
-		"@types/compression": "^1.7.1",
-		"c8": "^7.7.2",
+		"@types/compression": "^1.7.2",
+		"c8": "^7.9.0",
 		"compression": "^1.7.4",
-		"node-fetch": "^3.0.0-beta.9",
-		"polka": "^1.0.0-next.17",
-		"rollup": "^2.55.0",
-		"sirv": "^1.0.14",
+		"node-fetch": "^3.0.0",
+		"polka": "^1.0.0-next.20",
+		"rollup": "^2.56.3",
+		"sirv": "^1.0.17",
 		"uvu": "^0.5.1"
 	}
 }
