--- a/packages/create-svelte/shared/+prettier/package.json
+++ b/packages/create-svelte/shared/+prettier/package.json
@@ -1,6 +1,6 @@
 {
 	"devDependencies": {
-		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.2.0"
+		"prettier": "^2.4.1",
+		"prettier-plugin-svelte": "^2.4.0"
 	}
 }
