fix: prevent release action from running on forks of the repo (#2464)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   release:
+    # prevents this action from running on forks
+    if: github.repository == 'sveltejs/kit'
     name: Release
     runs-on: ubuntu-latest
     steps:
