--- a/packages/kit/tsconfig.json
+++ b/packages/kit/tsconfig.json
@@ -16,5 +16,6 @@
 			"types/*": ["./types/*"]
 		}
 	},
-	"include": ["src/**/*", "test/**/*", "types/**/*"]
+	"include": ["src/**/*", "test/**/*", "types/**/*"],
+	"exclude": ["src/packaging/test/fixtures/**/*"]
 }
