--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -31,7 +31,7 @@
 		"locate-character": "^2.0.5",
 		"marked": "^3.0.4",
 		"mime": "^2.5.2",
-		"node-fetch": "3.0.0-beta.9",
+		"node-fetch": "^3.0.0",
 		"port-authority": "^1.1.2",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.56.3",
