ci: don't run deploy docs workflow on forks (#2874)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   release:
+    # prevents this action from running on forks
+    if: github.repository == 'sveltejs/kit'
     name: Deploy docs
     runs-on: ubuntu-latest
     steps:
