--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6
+      - uses: actions/setup-node@v2
         with:
           node-version: '14.x'
-      - name: Cache ~/.pnpm-store
-        uses: actions/cache@main
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}
-      - run: npm install -g pnpm
+          cache: pnpm
       - run: pnpm install --frozen-lockfile
       - run: pnpm build --filter ./packages --filter !./packages/create-svelte/templates
       - run: pnpm lint
@@ -43,27 +39,22 @@ jobs:
     steps:
       - run: git config --global core.autocrlf false
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: pnpm
       - name: Get paths for OS
         uses: ./.github/actions/env
         id: paths
-      - name: Cache ~/.pnpm-store
-        id: cache
-        uses: actions/cache@main
-        with:
-          path: ${{ steps.paths.outputs.pnpm_cache_path }}
-          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}
       - name: Cache browsers
         id: browser_cache
         uses: actions/cache@main
         with:
           path: ${{ steps.paths.outputs.browser_cache_path }}
           key: chromium-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-      - run: npm install -g pnpm
       - run: pnpm install --frozen-lockfile
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: ${{ steps.browser_cache.outputs.cache-hit == 'true' }}
@@ -82,19 +73,15 @@ jobs:
     steps:
       - run: git config --global core.autocrlf false
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: pnpm
       - name: Get paths for OS
         uses: ./.github/actions/env
         id: paths
-      - name: Cache ~/.pnpm-store
-        uses: actions/cache@main
-        with:
-          path: ${{ steps.paths.outputs.pnpm_cache_path }}
-          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}
-      - run: npm install -g pnpm
       - run: pnpm install --frozen-lockfile
       - run: pnpm build && pnpm build --filter="hn.svelte.dev"
