--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,17 +13,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
-
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6
       - name: Setup Node.js 12.x
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v2
         with:
           node-version: 12.x
+          cache: pnpm
 
-      - run: npm install -g pnpm
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
 
