first crack at adapter-auto (#2867)
* first crack at adapter-auto

* make stuff work, maybe

* changeset

* appease the mighty eslint gods

* update readme

* add cloudflare pages

* add missing adapter

* update lockfile

* add support for community adapters

* update language

* update adapter docs

* tweak wording

--- a/packages/create-svelte/templates/default/package.json
+++ b/packages/create-svelte/templates/default/package.json
@@ -7,10 +7,8 @@
 		"start": "svelte-kit start"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-cloudflare-workers": "next",
-		"@sveltejs/adapter-netlify": "next",
-		"@sveltejs/adapter-vercel": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-auto": "workspace:*",
+		"@sveltejs/kit": "workspace:*",
 		"svelte": "^3.44.0",
 		"svelte-preprocess": "^4.9.8",
 		"typescript": "^4.4.3"
