--- a/packages/adapter-auto/package.json
+++ b/packages/adapter-auto/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sveltejs/adapter-auto",
-	"version": "1.0.0-next",
+	"version": "1.0.0-next.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/sveltejs/kit",
