--- a/packages/create-svelte/.gitignore
+++ b/packages/create-svelte/.gitignore
@@ -4,8 +4,10 @@
 /cli/versions.js
 
 /templates/*/.svelte
+/templates/*/.svelte-kit
 /templates/*/build
 /templates/*/.cloudflare
 /templates/*/.vercel_build_output
 /templates/*/.netlify
 /templates/*/dist
+/templates/*/package
