[fix] add types properly in exports in package.json (#2896)
Fixes #2863
Also removes somewhat weird types export "./types" which is redundant: you get these through the default import, too.

Co-authored-by: Simon Holthausen <simon.holthausen@accso.de>

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -68,6 +68,9 @@
 	},
 	"exports": {
 		"./package.json": "./package.json",
+		".": {
+			"types": "./types/index.d.ts"
+		},
 		"./ssr": {
 			"import": "./dist/ssr.js"
 		},
@@ -79,8 +82,7 @@
 		},
 		"./install-fetch": {
 			"import": "./dist/install-fetch.js"
-		},
-		"./types": "./types/index.d.ts"
+		}
 	},
 	"types": "types/index.d.ts",
 	"engines": {
