--- a/packages/adapter-auto/package.json
+++ b/packages/adapter-auto/package.json
@@ -6,6 +6,7 @@
 		"url": "https://github.com/sveltejs/kit",
 		"directory": "packages/adapter-auto"
 	},
+	"license": "MIT",
 	"homepage": "https://kit.svelte.dev",
 	"type": "module",
 	"exports": {
