chore: update dependencies (#2957)

--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
 	},
 	"homepage": "https://github.com/sveltejs/kit#readme",
 	"devDependencies": {
-		"@changesets/cli": "^2.17.0",
+		"@changesets/cli": "^2.18.1",
 		"@changesets/get-github-info": "^0.5.0",
-		"@rollup/plugin-commonjs": "^21.0.0",
+		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^13.0.5",
+		"@rollup/plugin-node-resolve": "^13.0.6",
 		"@sveltejs/eslint-config": "github:sveltejs/eslint-config#v5.8.0",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
+		"@typescript-eslint/eslint-plugin": "^5.5.0",
+		"@typescript-eslint/parser": "^5.5.0",
 		"action-deploy-docs": "github:sveltejs/action-deploy-docs#main",
 		"dotenv": "^10.0.0",
-		"eslint": "^7.32.0",
-		"eslint-plugin-import": "^2.24.2",
+		"eslint": "^8.3.0",
+		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"playwright-chromium": "^1.15.2",
-		"prettier": "^2.4.1",
-		"rollup": "^2.58.0",
-		"typescript": "^4.4.3"
+		"playwright-chromium": "^1.17.0",
+		"prettier": "^2.5.0",
+		"rollup": "^2.60.2",
+		"typescript": "~4.4.4"
 	},
 	"type": "module"
 }
