--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -24,6 +24,9 @@
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"test": "uvu test test.js"
 	},
+	"dependencies": {
+		"tiny-glob": "^0.2.9"
+	},
 	"devDependencies": {
 		"@sveltejs/kit": "workspace:*",
 		"playwright-chromium": "^1.17.0",
