--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -35,6 +35,7 @@
 		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
+		"@netlify/functions": "^0.10.0",
 		"@rollup/plugin-commonjs": "^21.0.0",
 		"@rollup/plugin-json": "^4.1.0",
 		"@rollup/plugin-node-resolve": "^13.0.5",
