--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -39,6 +39,7 @@
 		"sirv": "^1.0.19",
 		"svelte": "^3.44.2",
 		"svelte-check": "^2.2.10",
+		"svelte-preprocess": "^4.9.8",
 		"svelte2tsx": "~0.4.10",
 		"tiny-glob": "^0.2.9",
 		"uvu": "^0.5.2"
