--- a/packages/adapter-cloudflare-workers/package.json
+++ b/packages/adapter-cloudflare-workers/package.json
@@ -31,6 +31,8 @@
 		"esbuild": "^0.13.15"
 	},
 	"devDependencies": {
+		"@cloudflare/kv-asset-handler": "^0.2.0",
+		"@cloudflare/workers-types": "^3.3.0",
 		"@sveltejs/kit": "workspace:*"
 	}
 }
