try to get deploys working with pnpm (#3276)
* try to get deploys working with pnpm

* try this

* disable npm on netlify

* build everything

* remove unnecessary prebuild command

* empty commit

* comment explaining the NPM_FLAGS hack

* empty commit

* empty commit

* add deployment config details to a README

--- a/packages/create-svelte/templates/default/netlify.toml
+++ b/packages/create-svelte/templates/default/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-  command = "npm run build"
+  command = "npx pnpm install --store=node_modules/.pnpm-store && npx pnpm build -r"
   publish = "build"
+
+[build.environment]
+  NPM_FLAGS = "--version" # this prevents npm install from happening
