Crawl prerendered pages without regex hackery (#3288)
* start building more robust crawler

* implement crawler

* add ignore-rel-external test

* add large page test

* lint

* poor mans benchmarking

* speed things up a bit

* use substr where appropriate

* tweak

* use a map

* failing test for unquoted attributes

* fix unquoted attributes, albeit messily

* avoid allocating map

* fix attribute names

* use crawl function in prerender

* changeset

* lint

* comment out benchmarking stuff

* use requirePragma hack to ignore test fixtures

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,19 +5,21 @@
 	"printWidth": 100,
 	"overrides": [
 		{
-			"files": [
-				"*.svelte"
-			],
+			"files": ["*.svelte"],
 			"options": {
 				"svelteBracketNewLine": true
 			}
 		},
 		{
-			"files": [
-				"packages/kit/src/packaging/test/fixtures/**/expected/**/*"
-			],
+			"files": ["packages/kit/src/packaging/test/fixtures/**/expected/**/*"],
 			"options": {
-				requirePragma: true
+				"requirePragma": true
+			}
+		},
+		{
+			"files": ["packages/kit/src/core/adapt/prerender/fixtures/**/*"],
+			"options": {
+				"requirePragma": true
 			}
 		}
 	]
