[feat] `beforeNavigate` and `afterNavigate` lifecycle functions (#3293)
* feature/add-onBeforeNavigate-listner

* minor fixes

* naming

* minor naming changs

* minor improvements

* implement requested changes

* add newline

* newline fix

* docs fixes

* docs fixes #2

* docs fixes #2

* docs spacing

* minor docs fix

* speeling fix

* remove if(browser) check

* types

* snake_case

* snake case #2

* naming

* Update documentation/docs/05-modules.md

Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>

* Update pnpm-lock.yaml

* add onNavigate method

* Update packages/kit/src/runtime/client/router.js

Co-authored-by: Bjorn Lu <bjornlu.dev@gmail.com>

* Update packages/kit/test/test.js

Co-authored-by: Bjorn Lu <bjornlu.dev@gmail.com>

* minor naming and types improvements

* add docs

* mroe docs fixes

* snake case

* improve back/forwar browser handling

* improve sveltekit:index

* remove custom event, add callbacks.

* typo fix

* docs

* remove logs

* namig

* Update packages/kit/src/runtime/client/router.js

Co-authored-by: Bjorn Lu <bjornlu.dev@gmail.com>

* fixes

* improve types

* nicer format

* Added second parameter to `goto` function in tests

* Fixed `history.state` when fixing trailing slash

* Added tests for `onBeforeNavigate`

* lints

* add more tests

* reafactor

* fix if statement

* fix if statement 2

* remove unused files

* fix test

* patch changeset

* rename to beforeNavigate/afterNavigate

* typo

* make beforeNavigate callbacks synchronous

* rename internal functions

* make _navigate take non-position arguments. bit clearer

* remove sveltekit:index tests - this is non-user-facing implementation detail

* typo

* remove more sveltekit:index stuff

* separate out beforeNavigate tests

* simplify tests

* rename tests

* handle no-router case

* simplify some stuff

* only pa

--- a/packages/kit/.eslintrc.json
+++ b/packages/kit/.eslintrc.json
@@ -8,6 +8,8 @@
 		"goto": true,
 		"invalidate": true,
 		"prefetch": true,
-		"prefetchRoutes": true
+		"prefetchRoutes": true,
+		"beforeNavigate": true,
+		"afterNavigate": true
 	}
 }
