shuffle things around a bit (#3327)
* start shuffling files around

* move modules into shared folder

* remove all traces of .svelte-kit/dev

* move files around

* separate generated modules from pre-baked ones

* compact manifest routes

* centralise aliases

* alias to src files in dev

* get stuff working

* lint

* typechecking

* BUILD -> BUNDLED

* more

* remove unused files

* simplify

* stick to using built modules, for now

* lint

* bite me, windows

* how do windows people ever get anything done jfc

* hi-tech debugging technique

* try this

* so much fun

* argh

* ugh

* build doesnt need to take cwd argument

* tidy up some more stuff

* src/runtime -> src/modules

* fix circular dependency

* doh

* Update packages/kit/src/core/utils.js

Co-authored-by: Conduitry <git@chor.date>

* rename modules back to runtime to make PR tidier

* most likely candidate

* lint

* bump timeout. tests are excruciatingly slow on windows

* Update packages/kit/.gitignore

Co-authored-by: Ignatius Bagus <ignatius.mbs@gmail.com>

Co-authored-by: Conduitry <git@chor.date>
Co-authored-by: Ignatius Bagus <ignatius.mbs@gmail.com>

--- a/packages/kit/.gitignore
+++ b/packages/kit/.gitignore
@@ -1,8 +1,7 @@
 .DS_Store
 /node_modules
 /dist
-/assets/runtime
-/assets/kit.js
+/assets/*
 /client/**/*.d.ts
 /test/**/.svelte-kit
 /test/**/build
