exclude fixtures from linguist (#3394)
* exclude fixtures from linguist

* more specific paths

* should be the same

* apparently not

* please update properly

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 * text=auto eol=lf
-test/** -linguist-detectable
+/packages/**/test/** -linguist-detectable
+/packages/**/fixtures/** -linguist-detectable
