--- a/packages/create-svelte/templates/default/netlify.toml
+++ b/packages/create-svelte/templates/default/netlify.toml
@@ -4,3 +4,6 @@
 
 [build.environment]
   NPM_FLAGS = "--version" # this prevents npm install from happening
+
+[functions]
+  node_bundler = "esbuild"
