Add programmatic interface to create-svelte (#3437)
* [feat] add programmatic interface to create-svelte

* these should have been snake_cased before

Co-authored-by: Rich Harris <hello@rich-harris.dev>

--- a/packages/create-svelte/package.json
+++ b/packages/create-svelte/package.json
@@ -9,6 +9,7 @@
 	"license": "MIT",
 	"homepage": "https://kit.svelte.dev",
 	"bin": "./bin.js",
+	"main": "./index.js",
 	"dependencies": {
 		"kleur": "^4.1.4",
 		"prompts": "^2.4.2"
