Update template actions automatically using github actions (#3458)
* WIP

* script appears to work

* use the secret deploy key i just added to the repo

* appease typescript

* Update packages/create-svelte/package.json

Co-authored-by: Bjorn Lu <bjornlu.dev@gmail.com>

* attempt updating kit template using github actions

* remove reference to other script

* Update packages/create-svelte/package.json

* revisit copy pasted line

* be smarter about finding the workspace root

* allow manual trigger

* always make a change to the repo

Co-authored-by: Rich Harris <hello@rich-harris.dev>
Co-authored-by: Rich Harris <richard.a.harris@gmail.com>
Co-authored-by: Bjorn Lu <bjornlu.dev@gmail.com>
Co-authored-by: Antony Jones <antony@beyonk.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          UPDATE_TEMPLATE_SSH_KEY: ${{ secrets.UPDATE_TEMPLATE_SSH_KEY }}
 
       # TODO alert discord
       # - name: Send a Slack notification if a publish happens
