--- a/packages/create-svelte/tsconfig.json
+++ b/packages/create-svelte/tsconfig.json
@@ -4,8 +4,8 @@
 		"checkJs": true,
 		"noEmit": true,
 		"noImplicitAny": true,
-		"target": "es2020",
-		"module": "es2020",
+		"target": "esnext",
+		"module": "esnext",
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true
 	},
