install and build pnpm (#3463)
Co-authored-by: Antony Jones <antony@beyonk.com>

--- a/.github/workflows/update_template.yml
+++ b/.github/workflows/update_template.yml
@@ -35,16 +35,14 @@ jobs:
           cache: pnpm
 
       - uses: pnpm/action-setup@v2.0.1
-        working-directory: ./kit
         with:
           version: 6.23.2
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile]
 
       - name: Build kit
         working-directory: ./kit
-        run: pnpm build
+        run: |
+          pnpm install --frozen-lockfile
+          pnpm build
 
       - name: Write template
         working-directory: ./kit/packages/create-svelte
