set pnpm cache dir explicitly (#3467)
* set pnpm cache dir explicitly

Co-authored-by: Antony Jones <antony@beyonk.com>

--- a/.github/workflows/update_template.yml
+++ b/.github/workflows/update_template.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           node-version: 12.x
           cache: pnpm
+          cache-dependency-path: ${{ github.workspace }}/kit/pnpm-lock.yaml
 
       - name: Build kit
         working-directory: ${{ github.workspace }}/kit
