upgrade node from 12 to 16 (#3468)
* upgrade node from 12 to 16

Co-authored-by: Antony Jones <antony@beyonk.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,10 @@ jobs:
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.23.2
-      - name: Setup Node.js 12.x
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16.x
           cache: pnpm
 
       - run: pnpm install --frozen-lockfile
