--- a/.github/workflows/update_template.yml
+++ b/.github/workflows/update_template.yml
@@ -31,10 +31,10 @@ jobs:
         with:
           version: 6.23.2
 
-      - name: Setup Node.js 12.x
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16.x
           cache: pnpm
           cache-dependency-path: ${{ github.workspace }}/kit/pnpm-lock.yaml
 
