set git username (#3469)
Co-authored-by: Antony Jones <antony@beyonk.com>

--- a/.github/workflows/update_template.yml
+++ b/.github/workflows/update_template.yml
@@ -51,7 +51,9 @@ jobs:
       - name: Publish
         working-directory: ${{ github.workspace }}/template
         run: |
-          touch "generated-$(date +%s)" 
+          touch "generated-$(date +%s)"
+          git config user.email "noreply@svelte.dev"
+          git config user.name "[bot]"
           git add -A
           git commit -m "version $npm_package_version"
           git push main -f
