fix git syntax (#3470)
Co-authored-by: Antony Jones <antony@beyonk.com>

--- a/.github/workflows/update_template.yml
+++ b/.github/workflows/update_template.yml
@@ -56,4 +56,4 @@ jobs:
           git config user.name "[bot]"
           git add -A
           git commit -m "version $npm_package_version"
-          git push main -f
+          git push -u origin main -f
