escape redirect locations when prerendering, dont encode them (#3456)
* escape redirect locations when prerendering, dont encode them

* changeset

* fix checking

* huh

* actually run the tests

* ugh idk

* oops

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -60,12 +60,14 @@
 		"build": "rollup -c && node scripts/cp.js src/runtime/components assets/components",
 		"dev": "rollup -cw",
 		"lint": "eslint --ignore-path .gitignore --ignore-pattern \"src/packaging/test/**\" \"{src,test}/**/*.{ts,mjs,js,svelte}\" && npm run check-format",
-		"check": "tsc && svelte-check --ignore \"src/packaging/test\"",
+		"check": "tsc && svelte-check --ignore test/prerendering,src/packaging/test",
 		"format": "npm run check-format -- --write",
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"prepublishOnly": "npm run build",
-		"test": "npm run test:unit && npm run test:packaging && npm run test:integration",
+		"test": "npm run test:unit && npm run test:packaging && npm run test:prerendering && npm run test:integration",
 		"test:unit": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\" -i packaging",
+		"test:prerendering": "pnpm test:prerendering:basics",
+		"test:prerendering:basics": "cd test/prerendering/basics && pnpm test",
 		"test:packaging": "uvu src/packaging \"(spec\\.js|test[\\\\/]index\\.js)\"",
 		"test:integration": "pnpm test:integration:amp && pnpm test:integration:basics && pnpm test:integration:options && pnpm test:integration:options-2",
 		"test:integration:amp": "cd test/apps/amp && pnpm test",
