--- a/packages/kit/tsconfig.json
+++ b/packages/kit/tsconfig.json
@@ -17,5 +17,5 @@
 		}
 	},
 	"include": ["src/**/*", "test/**/*", "types/**/*"],
-	"exclude": ["src/packaging/test/fixtures/**/*"]
+	"exclude": ["src/packaging/test/fixtures/**/*", "test/prerendering/*/build/**/*"]
 }
