for petes sake (#3600)

--- a/packages/create-svelte/package.json
+++ b/packages/create-svelte/package.json
@@ -34,7 +34,7 @@
 		"format": "npm run check-format -- --write",
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path ../../.gitignore --ignore-path .gitignore --plugin prettier-plugin-svelte --plugin-search-dir=.",
 		"prepublishOnly": "npm run build",
-		"postpublish": "bash ./scripts/update-template-repo.sh"
+		"postpublish": "echo \"Updating template repo\" && bash ./scripts/update-template-repo.sh"
 	},
 	"files": [
 		"index.js",
