--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -66,8 +66,9 @@
 		"prepublishOnly": "npm run build",
 		"test": "npm run test:unit && npm run test:packaging && npm run test:prerendering && npm run test:integration",
 		"test:unit": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\" -i packaging",
-		"test:prerendering": "pnpm test:prerendering:basics",
+		"test:prerendering": "pnpm test:prerendering:basics && pnpm test:prerendering:options",
 		"test:prerendering:basics": "cd test/prerendering/basics && pnpm test",
+		"test:prerendering:options": "cd test/prerendering/options && pnpm test",
 		"test:packaging": "uvu src/packaging \"(spec\\.js|test[\\\\/]index\\.js)\"",
 		"test:integration": "pnpm test:integration:amp && pnpm test:integration:basics && pnpm test:integration:options && pnpm test:integration:options-2",
 		"test:integration:amp": "cd test/apps/amp && pnpm test",
