ci: fix test results upload (#3927)
* ci: fix test results upload

* fake a failing test

* revert fake failing test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,4 +65,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: test-failure-${{ github.run_id }}-${{ matrix.os }}-${{ matrix.node-version }}
-          path: '**/test-results'
+          path: packages/kit/**/test-results
