--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -24,6 +24,7 @@
 	"scripts": {
 		"dev": "rimraf files && rollup -cw",
 		"build": "rimraf files && rollup -c",
+		"test": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\"",
 		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
 		"format": "npm run check-format -- --write",
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
@@ -41,6 +42,7 @@
 		"@rollup/plugin-node-resolve": "^13.0.5",
 		"@sveltejs/kit": "workspace:*",
 		"rimraf": "^3.0.2",
-		"rollup": "^2.58.0"
+		"rollup": "^2.58.0",
+		"uvu": "^0.5.2"
 	}
 }
