initial types testing (#4124)
* native types testing with tsc

* initial endpoint typings test

* more cases for other instances

* case for invalid nested instance

* add clear separator

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -64,8 +64,9 @@
 		"format": "npm run check-format -- --write",
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"prepublishOnly": "npm run build",
-		"test": "npm run test:unit && npm run test:packaging && npm run test:prerendering && npm run test:integration",
+		"test": "npm run test:unit && npm run test:typings && npm run test:packaging && npm run test:prerendering && npm run test:integration",
 		"test:unit": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\" -i packaging",
+		"test:typings": "tsc --project test/typings",
 		"test:prerendering": "pnpm test:prerendering:basics && pnpm test:prerendering:options",
 		"test:prerendering:basics": "cd test/prerendering/basics && pnpm test",
 		"test:prerendering:options": "cd test/prerendering/options && pnpm test",
