Upgrade to TypeScript 4.6 (#4190)
* Upgrade to TypeScript 4.6

* Update .changeset/polite-laws-cheat.md

Co-authored-by: Ignatius Bagus <ignatius.mbs@gmail.com>

* remove unnecessary path prefixes

* remove one more prefix

* use sync

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>
Co-authored-by: Ignatius Bagus <ignatius.mbs@gmail.com>

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -62,13 +62,13 @@
 		"lint": "eslint --ignore-path .gitignore --ignore-pattern \"src/packaging/test/**\" \"{src,test}/**/*.{ts,mjs,js,svelte}\" && npm run check-format",
 		"check": "tsc && npm run check:integration && npm run check:prerendering",
 		"check:integration": "npm run check:integration:amp && npm run check:integration:basics && npm run check:integration:options && npm run check:integration:options-2",
-		"check:integration:amp": "cd test/apps/amp && pnpm check",
-		"check:integration:basics": "cd test/apps/basics && pnpm check",
-		"check:integration:options": "cd test/apps/options && pnpm check",
-		"check:integration:options-2": "cd test/apps/options-2 && pnpm check",
+		"check:integration:amp": "cd test/apps/amp && pnpm sync && pnpm check",
+		"check:integration:basics": "cd test/apps/basics && pnpm sync && pnpm check",
+		"check:integration:options": "cd test/apps/options && pnpm sync && pnpm check",
+		"check:integration:options-2": "cd test/apps/options-2 && pnpm sync && pnpm check",
 		"check:prerendering": "npm run check:prerendering:basics && npm run check:prerendering:options",
-		"check:prerendering:basics": "cd test/prerendering/basics && pnpm check",
-		"check:prerendering:options": "cd test/prerendering/options && pnpm check",
+		"check:prerendering:basics": "cd test/prerendering/basics && pnpm sync && pnpm check",
+		"check:prerendering:options": "cd test/prerendering/options && pnpm sync && pnpm check",
 		"format": "npm run check-format -- --write",
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"prepublishOnly": "npm run build",
