--- a/packages/adapter-auto/package.json
+++ b/packages/adapter-auto/package.json
@@ -26,11 +26,15 @@
 	"scripts": {
 		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
 		"format": "npm run check-format -- --write",
+		"check": "tsc",
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-cloudflare": "workspace:*",
 		"@sveltejs/adapter-netlify": "workspace:*",
 		"@sveltejs/adapter-vercel": "workspace:*"
+	},
+	"devDependencies": {
+		"typescript": "^4.6.2"
 	}
 }
