FIX: Separate playwrite templates for js vs ts (#4479)
* FIX: Separate playwrite templates for js vs ts

Playwrite file when building with typescript
requires the playwrite.config file to have extension .ts

* package.json shoudnt be duplicated

* install @playwright/test as dev dep to remove the red squigglies

* make the .ts file actually use typescript

* oops, typo

* bump version

* fix merging

* use next version of @playwright/test for TS users

Co-authored-by: Rich Harris <hello@rich-harris.dev>

--- a/packages/create-svelte/package.json
+++ b/packages/create-svelte/package.json
@@ -15,6 +15,7 @@
 		"prompts": "^2.4.2"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.20.1",
 		"@sveltejs/kit": "workspace:*",
 		"@types/gitignore-parser": "^0.0.0",
 		"@types/prettier": "^2.4.2",
