--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,10 +44,14 @@ jobs:
         if: steps.changesets.outputs.published == 'true'
         # wait a bit and then run "npm dist-tag add package@version latest" for all published packages
         env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           published_packages: ${{steps.changesets.outputs.publishedPackages}}
         run: |
           sleep 20
-          echo $published_packages | jq -r 'map((.name + "@" + .version)) | .[]' | while read pkgver; do echo npm dist-tag add $pkgver latest || continue;done
+          cat << EOF > "$HOME/.npmrc"
+            //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          EOF
+          echo $published_packages | jq -r 'map((.name + "@" + .version)) | .[]' | while read pkgver; do npm dist-tag add $pkgver latest || continue;done
 
       # TODO alert discord
       # - name: Send a Slack notification if a publish happens
