--- a/packages/create-svelte/templates/default/package.json
+++ b/packages/create-svelte/templates/default/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "default-template",
-	"version": "0.0.1",
+	"version": "0.0.2-next.0",
 	"private": true,
 	"scripts": {
 		"dev": "svelte-kit dev",
