--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -65,8 +65,8 @@
 		"format": "npm run check-format -- --write",
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"prepublishOnly": "npm run build",
-		"test": "npm run test:unit && npm run test:typings && npm run test:packaging",
-		"test:all": "pnpm run -r test --workspace-concurrency 1 --filter ./",
+		"test": "npm run test:unit && npm run test:typings && npm run test:packaging && npm run test:integration",
+		"test:integration": "pnpm run -r test --workspace-concurrency 1 --filter ./test",
 		"test:unit": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\" -i packaging",
 		"test:typings": "tsc --project test/typings",
 		"test:packaging": "uvu src/packaging \"(spec\\.js|test[\\\\/]index\\.js)\"",
