--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  TURBO_CACHE_KEY: ${{ matrix.os }}-${{ matrix.node-version }}
+  TURBO_CACHE_KEY: ubuntu-latest-16  # reuse cache key from ci workflow
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
