--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -23,6 +23,7 @@
 		"@types/mime": "^2.0.3",
 		"@types/node": "^16.11.11",
 		"@types/sade": "^1.7.3",
+		"@types/set-cookie-parser": "^2.4.2",
 		"amphtml-validator": "^1.0.35",
 		"cookie": "^0.5.0",
 		"cross-env": "^7.0.3",
@@ -36,6 +37,7 @@
 		"port-authority": "^1.1.2",
 		"rollup": "^2.60.2",
 		"selfsigned": "^2.0.0",
+		"set-cookie-parser": "^2.4.8",
 		"sirv": "^2.0.0",
 		"svelte": "^3.44.2",
 		"svelte-check": "^2.5.0",
