--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -11,6 +11,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
+		"chokidar": "^3.5.3",
 		"sade": "^1.7.4",
 		"vite": "^2.9.0"
 	},
