--- a/packages/adapter-auto/package.json
+++ b/packages/adapter-auto/package.json
@@ -35,6 +35,7 @@
 		"@sveltejs/adapter-vercel": "workspace:*"
 	},
 	"devDependencies": {
+		"@types/node": "^14.14.20",
 		"typescript": "^4.6.2"
 	}
 }
