--- a/packages/adapter-cloudflare-workers/package.json
+++ b/packages/adapter-cloudflare-workers/package.json
@@ -33,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/kv-asset-handler": "^0.2.0",
+		"@types/node": "^14.14.20",
 		"typescript": "^4.6.2"
 	}
 }
