--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -42,6 +42,7 @@
 		"@rollup/plugin-json": "^4.1.0",
 		"@rollup/plugin-node-resolve": "^13.0.5",
 		"@sveltejs/kit": "workspace:*",
+		"@types/node": "^14.14.20",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.58.0",
 		"typescript": "^4.6.2",
