--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -29,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "workspace:*",
+		"@types/node": "^14.14.20",
 		"playwright-chromium": "^1.21.0",
 		"port-authority": "^1.1.2",
 		"sirv": "^2.0.0",
