--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -46,6 +46,7 @@
 		"svelte-preprocess": "^4.9.8",
 		"svelte2tsx": "~0.5.0",
 		"tiny-glob": "^0.2.9",
+		"typescript": "^4.6.4",
 		"uvu": "^0.5.2"
 	},
 	"peerDependencies": {
