fix: lint pipeline automatically formats files, misses errors in CI (#5021)
* fix: Incorrectly-cached formatting

* stop formatting files before linting

* format changes in master

* rename the `autolint` script to `precommit`

Co-authored-by: mrkishi <mauriciokishi@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"check": "turbo run check",
 		"lint": "turbo run lint",
 		"format": "turbo run format",
+		"precommit": "turbo run precommit",
 		"release": "changeset publish"
 	},
 	"repository": {
