--- a/package.json
+++ b/package.json
@@ -24,22 +24,35 @@
 	"homepage": "https://github.com/sveltejs/kit#readme",
 	"devDependencies": {
 		"@changesets/cli": "^2.18.1",
+		"@playwright/test": "^1.21.0",
 		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-json": "^4.1.0",
 		"@rollup/plugin-node-resolve": "^13.0.6",
+		"@rollup/plugin-replace": "^4.0.0",
 		"@sveltejs/eslint-config": "github:sveltejs/eslint-config#v5.8.0",
 		"@svitejs/changesets-changelog-github-compact": "^0.1.1",
+		"@types/node": "^16.11.36",
 		"@typescript-eslint/eslint-plugin": "^5.5.0",
 		"@typescript-eslint/parser": "^5.5.0",
+		"cross-env": "^7.0.3",
 		"eslint": "^8.3.0",
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"port-authority": "^1.1.2",
 		"prettier": "^2.5.0",
+		"prettier-plugin-svelte": "^2.5.0",
+		"rimraf": "^3.0.2",
 		"rollup": "^2.60.2",
+		"sirv": "^2.0.0",
 		"svelte": "^3.48.0",
+		"svelte-check": "^2.5.0",
+		"svelte-preprocess": "^4.9.8",
+		"svelte2tsx": "~0.5.0",
+		"tiny-glob": "^0.2.9",
 		"turbo": "^1.2.6",
-		"typescript": "~4.6.2"
+		"typescript": "~4.6.2",
+		"uvu": "^0.5.2"
 	},
 	"packageManager": "pnpm@7.1.3",
 	"engines": {
