--- a/packages/adapter-cloudflare-workers/package.json
+++ b/packages/adapter-cloudflare-workers/package.json
@@ -32,8 +32,6 @@
 		"esbuild": "^0.14.29"
 	},
 	"devDependencies": {
-		"@cloudflare/kv-asset-handler": "^0.2.0",
-		"@types/node": "^14.14.20",
-		"typescript": "^4.6.2"
+		"@cloudflare/kv-asset-handler": "^0.2.0"
 	}
 }
