--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -35,18 +35,10 @@
 		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
-		"@rollup/plugin-json": "^4.1.0",
 		"@sveltejs/kit": "workspace:*",
 		"@types/compression": "^1.7.2",
-		"@types/node": "^14.14.20",
 		"c8": "^7.10.0",
 		"compression": "^1.7.4",
-		"node-fetch": "^3.1.0",
-		"polka": "^1.0.0-next.22",
-		"rimraf": "^3.0.2",
-		"rollup": "^2.60.2",
-		"sirv": "^2.0.0",
-		"typescript": "^4.6.2",
-		"uvu": "^0.5.2"
+		"polka": "^1.0.0-next.22"
 	}
 }
