--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -28,13 +28,6 @@
 		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "workspace:*",
-		"@types/node": "^14.14.20",
-		"playwright-chromium": "^1.21.0",
-		"port-authority": "^1.1.2",
-		"sirv": "^2.0.0",
-		"svelte": "^3.44.2",
-		"typescript": "^4.6.2",
-		"uvu": "^0.5.2"
+		"@sveltejs/kit": "workspace:*"
 	}
 }
