--- a/packages/create-svelte/package.json
+++ b/packages/create-svelte/package.json
@@ -15,18 +15,12 @@
 		"prompts": "^2.4.2"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.21.0",
 		"@sveltejs/kit": "workspace:*",
 		"@types/gitignore-parser": "^0.0.0",
 		"@types/prettier": "^2.4.2",
 		"@types/prompts": "^2.0.14",
 		"gitignore-parser": "^0.0.2",
-		"prettier": "^2.5.0",
-		"prettier-plugin-svelte": "^2.5.0",
-		"sucrase": "^3.20.3",
-		"svelte": "^3.44.2",
-		"svelte-preprocess": "^4.9.8",
-		"tiny-glob": "^0.2.9"
+		"sucrase": "^3.20.3"
 	},
 	"scripts": {
 		"build": "node scripts/build-templates",
