add types to pkg.exports (#5045)
* add types to pkg.exports - fixes #5028

* types first

--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -12,6 +12,7 @@
 	"main": "index.js",
 	"exports": {
 		".": {
+			"types": "./index.d.ts",
 			"import": "./index.js"
 		},
 		"./package.json": "./package.json"
