Fix double-mount bug (#4891)
* add failing test for double-mount bug

* prevent double mount

* lint

* lint

* skip tests

* skip another test

* use prepare instead of build for faster checking

* gah

* sync not prepare

--- a/turbo.json
+++ b/turbo.json
@@ -23,10 +23,11 @@
 			]
 		},
 		"check": {
-			"dependsOn": ["build"],
+			"dependsOn": ["sync"],
 			"outputs": []
 		},
 		"format": {},
+		"sync": {},
 		"test": {
 			"dependsOn": ["^build", "$CI", "$TURBO_CACHE_KEY"],
 			"outputs": []
