--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: '16.x'
           cache: pnpm
       - run: pnpm install --frozen-lockfile
+      - run: cd packages/kit && pnpm build
       - run: pnpm turbo run lint check
   Tests:
     runs-on: ${{ matrix.os }}
